--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "ejs": "^2.5.7",
-    "express": "4.16.2"
+    "express": "4.16.2",
+    "mongoose": "^4.13.1"
   }
 }
