--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "node": "8.9.0"
   },
   "dependencies": {
+    "connect-mongo": "^2.0.0",
     "ejs": "^2.5.7",
     "express": "4.16.2",
+    "express-session": "^1.15.6",
     "mongoose": "^4.13.1"
   }
 }
