--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-twitter": "^1.0.4",
     "redis": "^2.8.0",
     "socket.io": "^2.0.4",
-    "socket.io-redis": "^5.2.0"
+    "socket.io-redis": "^5.2.0",
+    "winston": "^2.4.0"
   }
 }
