--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "4.16.2",
     "express-session": "^1.15.6",
     "mongoose": "^4.13.1",
+    "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-twitter": "^1.0.4",
